parser.output
Terminals unused in grammar

   TDOT
   TNOT
   TAND
   TOR
   TBNOT
   TBAND
   TBOR


语法

    0 $accept: start $end

    1 start: INT TIDENTIFIER TLPAREN TRPAREN comp_stmt

    2 comp_stmt: TLBRACE stmts TRBRACE
    3          | TSEMICOLON

    4 stmts: stmt stmts
    5      | %empty

    6 stmt: matched_stmt
    7     | open_stmt

    8 matched_stmt: IF TLPAREN expr TRPAREN matched_stmt ELSE matched_stmt
    9             | expr TSEMICOLON
   10             | comp_stmt
   11             | TREAD TLPAREN identifier TRPAREN TSEMICOLON
   12             | TWRITE TLPAREN expr TRPAREN TSEMICOLON
   13             | WHILE TLPAREN expr TRPAREN matched_stmt
   14             | FOR TLPAREN optional_expr TSEMICOLON optional_expr TSEMICOLON optional_expr TRPAREN matched_stmt

   15 open_stmt: IF TLPAREN expr TRPAREN stmt
   16          | IF TLPAREN expr TRPAREN matched_stmt ELSE open_stmt

   17 type: INT
   18     | CHAR
   19     | FLOAT
   20     | DOUBLE

   21 args_list: decl_assign_expr
   22          | decl_assign_expr TCOMMA args_list

   23 decl_assign_expr: factor TEQUAL expr_alg
   24                 | factor

   25 optional_expr: expr
   26              | %empty

   27 expr: expr_alg TCEQ expr_alg
   28     | expr_alg TCLT expr_alg
   29     | expr_alg TCGT expr_alg
   30     | expr_alg TCLE expr_alg
   31     | expr_alg TCGE expr_alg
   32     | expr_alg TCNE expr_alg
   33     | factor TEQUAL expr
   34     | expr_alg
   35     | type args_list

   36 expr_alg: term TPLUS expr_alg
   37         | term TMINUS expr_alg
   38         | term

   39 term: factor TMUL term
   40     | factor TDIV term
   41     | factor TMOD term
   42     | factor

   43 factor: TLPAREN expr TRPAREN
   44       | identifier
   45       | TINTEGER
   46       | TDOUBLE
   47       | TCHAR
   48       | TMINUS TINTEGER
   49       | TPLUS TINTEGER

   50 identifier: TIDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 1 17
CHAR (259) 18
FLOAT (260) 19
DOUBLE (261) 20
IF (262) 8 15 16
ELSE (263) 8 16
WHILE (264) 13
FOR (265) 14
TIDENTIFIER (266) 1 50
TINTEGER (267) 45 48 49
TDOUBLE (268) 46
TCHAR (269) 47
TCEQ (270) 27
TCNE (271) 32
TCLT (272) 28
TCLE (273) 30
TCGT (274) 29
TCGE (275) 31
TEQUAL (276) 23 33
TLPAREN (277) 1 8 11 12 13 14 15 16 43
TRPAREN (278) 1 8 11 12 13 14 15 16 43
TLBRACE (279) 2
TRBRACE (280) 2
TCOMMA (281) 22
TDOT (282)
TSEMICOLON (283) 3 9 11 12 14
TPLUS (284) 36 49
TMINUS (285) 37 48
TMUL (286) 39
TDIV (287) 40
TMOD (288) 41
TREAD (289) 11
TWRITE (290) 12
TNOT (291)
TAND (292)
TOR (293)
TBNOT (294)
TBAND (295)
TBOR (296)


Nonterminals, with rules where they appear

$accept (42)
    左： 0
start (43)
    左： 1, 右： 0
comp_stmt (44)
    左： 2 3, 右： 1 10
stmts (45)
    左： 4 5, 右： 2 4
stmt (46)
    左： 6 7, 右： 4 15
matched_stmt (47)
    左： 8 9 10 11 12 13 14, 右： 6 8 13 14 16
open_stmt (48)
    左： 15 16, 右： 7 16
type (49)
    左： 17 18 19 20, 右： 35
args_list (50)
    左： 21 22, 右： 22 35
decl_assign_expr (51)
    左： 23 24, 右： 21 22
optional_expr (52)
    左： 25 26, 右： 14
expr (53)
    左： 27 28 29 30 31 32 33 34 35, 右： 8 9 12 13 15 16 25 33
    43
expr_alg (54)
    左： 36 37 38, 右： 23 27 28 29 30 31 32 34 36 37
term (55)
    左： 39 40 41 42, 右： 36 37 38 39 40 41
factor (56)
    左： 43 44 45 46 47 48 49, 右： 23 24 33 39 40 41 42
identifier (57)
    左： 50, 右： 11 44


State 0

    0 $accept: . start $end

    INT  shift, and go to state 1

    start  转到状态 2


State 1

    1 start: INT . TIDENTIFIER TLPAREN TRPAREN comp_stmt

    TIDENTIFIER  shift, and go to state 3


State 2

    0 $accept: start . $end

    $end  shift, and go to state 4


State 3

    1 start: INT TIDENTIFIER . TLPAREN TRPAREN comp_stmt

    TLPAREN  shift, and go to state 5


State 4

    0 $accept: start $end .

    $default  接受


State 5

    1 start: INT TIDENTIFIER TLPAREN . TRPAREN comp_stmt

    TRPAREN  shift, and go to state 6


State 6

    1 start: INT TIDENTIFIER TLPAREN TRPAREN . comp_stmt

    TLBRACE     shift, and go to state 7
    TSEMICOLON  shift, and go to state 8

    comp_stmt  转到状态 9


State 7

    2 comp_stmt: TLBRACE . stmts TRBRACE

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    IF           shift, and go to state 14
    WHILE        shift, and go to state 15
    FOR          shift, and go to state 16
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TLBRACE      shift, and go to state 7
    TSEMICOLON   shift, and go to state 8
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TREAD        shift, and go to state 24
    TWRITE       shift, and go to state 25

    $default  reduce using rule 5 (stmts)

    comp_stmt     转到状态 26
    stmts         转到状态 27
    stmt          转到状态 28
    matched_stmt  转到状态 29
    open_stmt     转到状态 30
    type          转到状态 31
    expr          转到状态 32
    expr_alg      转到状态 33
    term          转到状态 34
    factor        转到状态 35
    identifier    转到状态 36


State 8

    3 comp_stmt: TSEMICOLON .

    $default  reduce using rule 3 (comp_stmt)


State 9

    1 start: INT TIDENTIFIER TLPAREN TRPAREN comp_stmt .

    $default  reduce using rule 1 (start)


State 10

   17 type: INT .

    $default  reduce using rule 17 (type)


State 11

   18 type: CHAR .

    $default  reduce using rule 18 (type)


State 12

   19 type: FLOAT .

    $default  reduce using rule 19 (type)


State 13

   20 type: DOUBLE .

    $default  reduce using rule 20 (type)


State 14

    8 matched_stmt: IF . TLPAREN expr TRPAREN matched_stmt ELSE matched_stmt
   15 open_stmt: IF . TLPAREN expr TRPAREN stmt
   16          | IF . TLPAREN expr TRPAREN matched_stmt ELSE open_stmt

    TLPAREN  shift, and go to state 37


State 15

   13 matched_stmt: WHILE . TLPAREN expr TRPAREN matched_stmt

    TLPAREN  shift, and go to state 38


State 16

   14 matched_stmt: FOR . TLPAREN optional_expr TSEMICOLON optional_expr TSEMICOLON optional_expr TRPAREN matched_stmt

    TLPAREN  shift, and go to state 39


State 17

   50 identifier: TIDENTIFIER .

    $default  reduce using rule 50 (identifier)


State 18

   45 factor: TINTEGER .

    $default  reduce using rule 45 (factor)


State 19

   46 factor: TDOUBLE .

    $default  reduce using rule 46 (factor)


State 20

   47 factor: TCHAR .

    $default  reduce using rule 47 (factor)


State 21

   43 factor: TLPAREN . expr TRPAREN

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    type        转到状态 31
    expr        转到状态 40
    expr_alg    转到状态 33
    term        转到状态 34
    factor      转到状态 35
    identifier  转到状态 36


State 22

   49 factor: TPLUS . TINTEGER

    TINTEGER  shift, and go to state 41


State 23

   48 factor: TMINUS . TINTEGER

    TINTEGER  shift, and go to state 42


State 24

   11 matched_stmt: TREAD . TLPAREN identifier TRPAREN TSEMICOLON

    TLPAREN  shift, and go to state 43


State 25

   12 matched_stmt: TWRITE . TLPAREN expr TRPAREN TSEMICOLON

    TLPAREN  shift, and go to state 44


State 26

   10 matched_stmt: comp_stmt .

    $default  reduce using rule 10 (matched_stmt)


State 27

    2 comp_stmt: TLBRACE stmts . TRBRACE

    TRBRACE  shift, and go to state 45


State 28

    4 stmts: stmt . stmts

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    IF           shift, and go to state 14
    WHILE        shift, and go to state 15
    FOR          shift, and go to state 16
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TLBRACE      shift, and go to state 7
    TSEMICOLON   shift, and go to state 8
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23
    TREAD        shift, and go to state 24
    TWRITE       shift, and go to state 25

    $default  reduce using rule 5 (stmts)

    comp_stmt     转到状态 26
    stmts         转到状态 46
    stmt          转到状态 28
    matched_stmt  转到状态 29
    open_stmt     转到状态 30
    type          转到状态 31
    expr          转到状态 32
    expr_alg      转到状态 33
    term          转到状态 34
    factor        转到状态 35
    identifier    转到状态 36


State 29

    6 stmt: matched_stmt .

    $default  reduce using rule 6 (stmt)


State 30

    7 stmt: open_stmt .

    $default  reduce using rule 7 (stmt)


State 31

   35 expr: type . args_list

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    args_list         转到状态 47
    decl_assign_expr  转到状态 48
    factor            转到状态 49
    identifier        转到状态 36


State 32

    9 matched_stmt: expr . TSEMICOLON

    TSEMICOLON  shift, and go to state 50


State 33

   27 expr: expr_alg . TCEQ expr_alg
   28     | expr_alg . TCLT expr_alg
   29     | expr_alg . TCGT expr_alg
   30     | expr_alg . TCLE expr_alg
   31     | expr_alg . TCGE expr_alg
   32     | expr_alg . TCNE expr_alg
   34     | expr_alg .

    TCEQ  shift, and go to state 51
    TCNE  shift, and go to state 52
    TCLT  shift, and go to state 53
    TCLE  shift, and go to state 54
    TCGT  shift, and go to state 55
    TCGE  shift, and go to state 56

    $default  reduce using rule 34 (expr)


State 34

   36 expr_alg: term . TPLUS expr_alg
   37         | term . TMINUS expr_alg
   38         | term .

    TPLUS   shift, and go to state 57
    TMINUS  shift, and go to state 58

    $default  reduce using rule 38 (expr_alg)


State 35

   33 expr: factor . TEQUAL expr
   39 term: factor . TMUL term
   40     | factor . TDIV term
   41     | factor . TMOD term
   42     | factor .

    TEQUAL  shift, and go to state 59
    TMUL    shift, and go to state 60
    TDIV    shift, and go to state 61
    TMOD    shift, and go to state 62

    $default  reduce using rule 42 (term)


State 36

   44 factor: identifier .

    $default  reduce using rule 44 (factor)


State 37

    8 matched_stmt: IF TLPAREN . expr TRPAREN matched_stmt ELSE matched_stmt
   15 open_stmt: IF TLPAREN . expr TRPAREN stmt
   16          | IF TLPAREN . expr TRPAREN matched_stmt ELSE open_stmt

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    type        转到状态 31
    expr        转到状态 63
    expr_alg    转到状态 33
    term        转到状态 34
    factor      转到状态 35
    identifier  转到状态 36


State 38

   13 matched_stmt: WHILE TLPAREN . expr TRPAREN matched_stmt

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    type        转到状态 31
    expr        转到状态 64
    expr_alg    转到状态 33
    term        转到状态 34
    factor      转到状态 35
    identifier  转到状态 36


State 39

   14 matched_stmt: FOR TLPAREN . optional_expr TSEMICOLON optional_expr TSEMICOLON optional_expr TRPAREN matched_stmt

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    $default  reduce using rule 26 (optional_expr)

    type           转到状态 31
    optional_expr  转到状态 65
    expr           转到状态 66
    expr_alg       转到状态 33
    term           转到状态 34
    factor         转到状态 35
    identifier     转到状态 36


State 40

   43 factor: TLPAREN expr . TRPAREN

    TRPAREN  shift, and go to state 67


State 41

   49 factor: TPLUS TINTEGER .

    $default  reduce using rule 49 (factor)


State 42

   48 factor: TMINUS TINTEGER .

    $default  reduce using rule 48 (factor)


State 43

   11 matched_stmt: TREAD TLPAREN . identifier TRPAREN TSEMICOLON

    TIDENTIFIER  shift, and go to state 17

    identifier  转到状态 68


State 44

   12 matched_stmt: TWRITE TLPAREN . expr TRPAREN TSEMICOLON

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    type        转到状态 31
    expr        转到状态 69
    expr_alg    转到状态 33
    term        转到状态 34
    factor      转到状态 35
    identifier  转到状态 36


State 45

    2 comp_stmt: TLBRACE stmts TRBRACE .

    $default  reduce using rule 2 (comp_stmt)


State 46

    4 stmts: stmt stmts .

    $default  reduce using rule 4 (stmts)


State 47

   35 expr: type args_list .

    $default  reduce using rule 35 (expr)


State 48

   21 args_list: decl_assign_expr .
   22          | decl_assign_expr . TCOMMA args_list

    TCOMMA  shift, and go to state 70

    $default  reduce using rule 21 (args_list)


State 49

   23 decl_assign_expr: factor . TEQUAL expr_alg
   24                 | factor .

    TEQUAL  shift, and go to state 71

    $default  reduce using rule 24 (decl_assign_expr)


State 50

    9 matched_stmt: expr TSEMICOLON .

    $default  reduce using rule 9 (matched_stmt)


State 51

   27 expr: expr_alg TCEQ . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 72
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 52

   32 expr: expr_alg TCNE . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 74
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 53

   28 expr: expr_alg TCLT . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 75
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 54

   30 expr: expr_alg TCLE . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 76
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 55

   29 expr: expr_alg TCGT . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 77
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 56

   31 expr: expr_alg TCGE . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 78
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 57

   36 expr_alg: term TPLUS . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 79
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 58

   37 expr_alg: term TMINUS . expr_alg

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    expr_alg    转到状态 80
    term        转到状态 34
    factor      转到状态 73
    identifier  转到状态 36


State 59

   33 expr: factor TEQUAL . expr

    INT          shift, and go to state 10
    CHAR         shift, and go to state 11
    FLOAT        shift, and go to state 12
    DOUBLE       shift, and go to state 13
    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    type        转到状态 31
    expr        转到状态 81
    expr_alg    转到状态 33
    term        转到状态 34
    factor      转到状态 35
    identifier  转到状态 36


State 60

   39 term: factor TMUL . term

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    term        转到状态 82
    factor      转到状态 73
    identifier  转到状态 36


State 61

   40 term: factor TDIV . term

    TIDENTIFIER  shift, and go to state 17
    TINTEGER     shift, and go to state 18
    TDOUBLE      shift, and go to state 19
    TCHAR        shift, and go to state 20
    TLPAREN      shift, and go to state 21
    TPLUS        shift, and go to state 22
    TMINUS       shift, and go to state 23

    term        转到状态 83
    factor      转到状态 73
    identifier  转到状态 36


State 62

   41 term: factor TMOD . term
